# PHoundation

./: README.md  pyproject.toml
src/: train.py
src/portal_vein/: compute_diameter_pv.py
src/radiomics/: extract_radiomics_features.py  radiomics_utils.py
src/statistics/: delong_tests.py
src/statistics/regression/foundation_model_biomedclip/: cv_results.csv  features_importances.csv  metrics.csv  metrics_post_processed_median.csv  probas_test_external.csv  probas_test_external_post_processed.csv  probas_test_internal.csv  probas_test_internal_post_processed.csv  probas_train_internal.csv  probas_train_internal_post_processed.csv  probas_val_internal.csv  probas_val_internal_post_processed.csv  shap_values.csv
src/statistics/regression/foundation_model_curia/: cv_results.csv  features_importances.csv  hyperparameters.json  metrics.csv  metrics_post_processed_median.csv  probas_test_external.csv  probas_test_external_post_processed.csv  probas_test_internal.csv  probas_test_internal_post_processed.csv  probas_train_internal.csv  probas_train_internal_post_processed.csv  probas_val_internal.csv  probas_val_internal_post_processed.csv  shap_values.csv
src/statistics/regression/foundation_model_medimageinsight/: cv_results.csv  features_importances.csv  hyperparameters.json  metrics.csv  metrics_post_processed_median.csv  probas_test_external.csv  probas_test_external_post_processed.csv  probas_test_internal.csv  probas_test_internal_post_processed.csv  probas_train_internal.csv  probas_train_internal_post_processed.csv  (+4 more)
utils/: create_pca_features.py  metrics.py
(+36 files in other folders)
