[tool.poetry]
name = "htp"
version = "0.1.0"
description = ""
authors = ["Raidium"]
readme = "README.md"
packages = [{include = "raidium", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11" # pyradiomics does not support 3.10
ipykernel = "^6.29.4"
matplotlib = "^3.9.0"
nibabel = "^5.2.1"
opencv-python = "^4.10.0.84"
scikit-image = "^0.24.0"
ipympl = "^0.9.4"
scikit-learn = "^1.3.2"
plotly = "^5.22.0"
nbformat = "^5.10.4"
pre-commit = "^3.7.1"
seaborn = "^0.13.2"
torch = "^2.5.1"
torchmetrics = "^1.6.0"
xgboost = "^2.1.2"
tqdm = "^4.67.1"
numpy = "^1.9"
shap = "^0.47.2"
mlstatkit = "^0.1.7"
python-docx = "^1.2.0"
statsmodels = "^0.14.4"
pingouin = "^0.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
